--- a/animal/css/common.css
+++ b/animal/css/common.css
@@ -22,22 +22,21 @@ html, body {
 하겠다는 선언임. */
 @media screen and (max-width:1300px){
     #wrap {
-        min-width: 1300px; 
+        min-width: 100%; 
     }
     .wrapper {
-        /* 너비는 1260px 유지 */
+        /* 너비가 빠져야함 */
+        width: auto;
         margin: 0 20px; /* 좌우에 20px씩 부여함 */
     }
 }/*media1300*/
+@media screen and (max-width:1024px) {
+    html, body {
+        font-size: 14px;
+    }
+}/*media 1024 */
 @media screen and (max-width:640px){ /*이 사이즈 이하부터 모바일 반응형 시작 */
     html, body {
         font-size: 13px;
     }
-    #wrap {
-        min-width: 100%;
-    }
-    .wrapper {
-        width: auto;
-    }
-    
 }/*media640*/
